# D2-PromptSelector-comfyUI

./: .gitignore  README.md  README_en.md  README_zh.md  __init__.py  package.json  pyproject copy.toml  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
docs/: i18n.md  i18n_en.md  i18n_zh.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: add-import.js
frontend/src/: Constants.ts  index.ts  types.ts  utils.ts
frontend/src/css/: _d2ps-button.scss  _d2ps-dialog.scss  _d2ps-sample.scss  _d2ps-search.scss  _d2ps-show-button.scss  _d2ps-sort.scss  _d2ps-tab.scss  _d2ps-tag-field.scss  _d2ps-tooltip.scss  _d2ps.scss  style.scss
frontend/src/i18n/: index.ts
frontend/src/lib/: CategoryButton.svelte  CategoryEditorDialog.svelte  CategoryView.svelte  ConfirmDialog.svelte  FileDeleteConfirmDialog.svelte  FileEditorDialog.svelte  MigrationDialog.svelte  PromptSelector.svelte  SampleView.svelte  SearchView.svelte  ShowButton.svelte  SortDialog.svelte  TabNavi.svelte  TagButton.svelte  TagEditorDialog.svelte  TagNodeItem.svelte  ToolTip.svelte
nodes/: nodes.py  prompt_replacer.py  tags.py  utils.py
scripts/: add-import.js
src/css/: _d2ps-tooltip.scss  _d2ps.scss
src/js/: Constants.ts  D2PS_Category.ts  D2PS_ElementBuilder.ts  D2PS_PromptSelector.ts  D2PS_PromptSelectorUnit.ts  D2PS_Search.ts  D2PS_ShowButton.ts  D2PS_TabNavi.ts  D2PS_ToolTip.ts  __prompt_selector.js  index.ts  utils.ts
tags_sample/: __config__.yml  人.yml  人_顔.yml  人_髪.yml
web/: d2_prompt_selector.css  d2_prompt_selector.js  d2_prompt_selector.js.map  style.css
web/locales/: en.json  ja.json  zh-TW.json  zh.json
(+3 files in other folders)
