[project]
description = "A utility that allows you to input registered prompts with a single button click."
license = {file = "LICENSE"}
name = "d2-promptselector-comfyui"
version = "3.0.1"

[project.urls]
Repository = "https://github.com/da2el-ai/D2-PromptSelector-comfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
DisplayName = "D2-PromptSelector-ComfyUI"
Icon = "https://raw.githubusercontent.com/da2el-ai/D2-nodes-ComfyUI/refs/heads/main/docs/img/cover.jpg"
PublisherId = "da2el"
